GUI added for Friday